--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node web/app.js",
+    "dev": "nodemon web/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "redis": "^3.0.2"
   },
   "devDependencies": {
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7"
   }
 }
