Updated Docker setup for Heroku

--- a/web/Dockerfile.production
+++ b/web/Dockerfile.production
@@ -1,17 +1,13 @@
-# FROM baseImage
 FROM node:14-alpine
-
-ENV NODE_ENV=production
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --production
+RUN npm install
+
 
 COPY . .
-
-ENV PORT=5000
 
 EXPOSE 5000
 
