--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "engines": {
     "node": "14.x"
   },
-  "main": "app.js",
+  "main": "web/app.js",
   "scripts": {
-    "start": "node web/app.js",
-    "dev": "nodemon web/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,16 +19,6 @@
     "url": "https://github.com/opensandiego/sdvv-backend/issues"
   },
   "homepage": "https://github.com/opensandiego/sdvv-backend#readme",
-  "dependencies": {
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "ioredis": "^4.19.4",
-    "pg": "^8.5.1",
-    "puppeteer": "^5.5.0",
-    "redis": "^3.0.2"
-  },
-  "devDependencies": {
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.7"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
