--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@
 # This will be used instead of a Procfile.
 build:
   docker:
-    web: web/Dockerfile.production
+    web: api/Dockerfile.production
