--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "14.x"
   },
-  "main": "web/app.js",
+  "main": "api/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
