--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "ioredis": "^4.19.4",
     "pg": "^8.5.1",
     "puppeteer": "^5.5.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "sequelize": "^6.4.0"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
