--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "ioredis": "^4.19.4",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "puppeteer": "^5.5.0",
     "redis": "^3.0.2",
     "sequelize": "^6.4.0"
