changed app entry file from app.js to server.js

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     working_dir: /app
-    command: [ "nodemon", "-L", "app.js" ]
+    command: [ "nodemon", "-L", "server.js" ]
     ports:
       - "5000:5000"
     volumes:
