--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node app/server.js",
     "dev": "nodemon app/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "set NODE_ENV=test&& mocha ./app/test --exit"
   },
   "homepage": "https://github.com/opensandiego/sdvv-backend#readme",
   "repository": {
@@ -34,8 +34,11 @@
     "sequelize": "^6.4.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "faker": "^5.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sinon": "^9.2.4"
   }
 }
