added dialectOptions to production in config.json

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -16,6 +16,9 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "dialectOptions": {
+        "ssl": true
+    }
   }
 }
