--- a/app/config/config.json
+++ b/app/config/config.json
@@ -16,9 +16,6 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres",
-    "dialectOptions": {
-        "ssl": true
-    }
+    "dialect": "postgres"
   }
 }
