--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('app/config', 'database.json'),
+  'config': path.resolve('app/config', 'config.json'),
   'models-path': path.resolve('app', 'models'),
   'seeders-path': path.resolve('app', 'seeders'),
   'migrations-path': path.resolve('app', 'migrations')
