--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdvv-backend",
+  "name": "sdvv-backend-nest",
   "version": "0.0.1",
   "description": "San Diego Voters Voice backend and data store",
   "author": "Open San Diego",
