--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "axios": "^0.21.3",
     "bull": "^3.29.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
