added currency.js set redis to not auto start

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bull": "^3.29.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "currency.js": "^2.0.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
