Added efile-api library

--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/sdvv-database(|/.*)$": "<rootDir>/libs/sdvv-database/src/$1"
+      "^@app/sdvv-database(|/.*)$": "<rootDir>/libs/sdvv-database/src/$1",
+      "^@app/efile-api-data(|/.*)$": "<rootDir>/libs/efile-api-data/src/$1"
     }
   }
 }
