--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:web:dev": "nest start --watch",
     "start:worker:dev": "nest start standalone-worker --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/apps/sdvv-backend-nest/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
