--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "npm run build:web && npm run build:worker",
+    "build:web": "nest build sdvv-backend-nest",
+    "build:worker": "nest build standalone-worker",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:web:dev": "nest start --watch",
+    "start:web:dev": "nest start sdvv-backend-nest --watch",
     "start:worker:dev": "nest start standalone-worker --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/sdvv-backend-nest/main",
+    "start:prod:web": "node dist/apps/sdvv-backend-nest/main",
+    "start:prod:worker": "node dist/apps/standalone-worker/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
