--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "currency.js": "^2.0.4",
+    "nest-winston": "^1.6.1",
     "nestjs-console": "^7.0.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +50,7 @@
     "ts-node": "^10.0.0",
     "typeorm": "^0.2.41",
     "typescript": "^4.3.5",
+    "winston": "^3.3.3",
     "xlsx": "^0.17.2"
   },
   "devDependencies": {
