--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "tsconfig-paths": "^3.10.1",
     "ts-node": "^10.0.0",
     "typeorm": "^0.2.41",
     "typescript": "^4.3.5",
@@ -72,8 +73,7 @@
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "tsconfig-paths": "^3.10.1"
+    "ts-loader": "^9.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
