--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@nestjs/platform-express": "^8.2.3",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/node": "^16.0.0",
     "axios": "^0.21.3",
     "bull": "^3.29.1",
     "cache-manager": "^3.4.4",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "currency.js": "^2.0.4",
+    "expose-gc": "^1.0.0",
     "nest-winston": "^1.6.1",
     "nestjs-console": "^7.0.1",
     "pg": "^8.7.1",
@@ -50,7 +52,6 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typeorm": "^0.2.41",
-    "@types/node": "^16.0.0",
     "typescript": "^4.3.5",
     "winston": "^3.3.3",
     "xlsx": "^0.17.2"
