--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.21.3",
     "bull": "^3.29.1",
     "cache-manager": "^3.4.4",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "currency.js": "^2.0.4",
