Adds database setup to npm scripts

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "npm run build:web && npm run build:worker",
     "build:web": "nest build sdvv-backend-nest",
     "build:worker": "nest build standalone-worker",
+    "db:migration:run": "npm run typeorm migration:run",
+    "db:initialize:data": "node -r ts-node/register apps/standalone-worker/src/console.ts initialize-data",
+    "db:migration:revert": "npm run typeorm migration:revert",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:web:dev": "nest start sdvv-backend-nest --watch",
