--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/platform-express": "^8.2.5",
     "@nestjs/schedule": "^1.0.2",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
     "@types/node": "^16.0.0",
     "apollo-server-express": "^3.6.1",
