--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
       - "54321:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin # or example
+      POSTGRES_PASSWORD: example # not necessary when using POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_DB: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
     networks:
       - postgres_db_network
 
   pgadmin:
-    image: dpage/pgadmin4:6.2
+    image: dpage/pgadmin4:6.18
     container_name: pgadmin
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
@@ -25,9 +25,12 @@ services:
       - "5050:5050"
     networks:
       - postgres_db_network
+    volumes:
+      - ./pgadmin_servers.json:/pgadmin4/servers.json # preconfigured servers/connections
+      # - ./pgpass:/pgpass # passwords for the connections in this file, this is not yet setup
     depends_on:
       - postgres_db_dev
-# When using Create > Server in pgAdmin use the name under depends_on for the "Host name/address" in Connection
+    # The password field for connectiong to Local Postgres Server can be left blank
 
   redis:
     image: redis:alpine
