--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # This docker-compose.yml is only used to run containers locally for development and testing.
-version: "3"
+version: "3.9"
 services:
   postgres_db_dev:
     image: "postgres:latest"
@@ -15,12 +15,14 @@ services:
       - postgres_db_network
 
   pgadmin:
-    image: dpage/pgadmin4:6.18
+    image: dpage/pgadmin4:6.20
     container_name: pgadmin
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
-      - PGADMIN_LISTEN_PORT=5050
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 5050
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      MASTER_PASSWORD_REQUIRED: "False"
     ports:
       - "5050:5050"
     networks:
@@ -37,6 +39,8 @@ services:
     container_name: redis
     ports:
      - 6379:6379
+    networks:
+      - postgres_db_network
 
 networks:
   postgres_db_network:
