--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "San Diego Voters Voice backend and data store",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "author": "Open San Diego",
   "private": true,
@@ -13,9 +13,9 @@
     "build": "npm run build:web && npm run build:worker",
     "build:web": "nest build sdvv-backend-nest",
     "build:worker": "nest build standalone-worker",
-    "db:migration:run": "npm run typeorm migration:run",
+    "db:migration:run": "npm run typeorm migration:run -- -d ./orm-data-source.ts",
     "db:initialize:data": "node -r ts-node/register apps/standalone-worker/src/console.ts initialize-data",
-    "db:migration:revert": "npm run typeorm migration:revert",
+    "db:migration:revert": "npm run typeorm migration:revert -- -d ./orm-data-source.ts",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:web:dev": "nest start sdvv-backend-nest --watch",
@@ -29,64 +29,67 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/sdvv-backend-nest/test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
-    "@nestjs/axios": "0.0.4",
-    "@nestjs/bull": "^0.4.2",
-    "@nestjs/common": "^8.2.5",
-    "@nestjs/config": "^1.1.6",
-    "@nestjs/core": "^8.2.5",
-    "@nestjs/graphql": "^9.1.2",
-    "@nestjs/mapped-types": "^1.0.1",
-    "@nestjs/platform-express": "^8.4.7",
-    "@nestjs/schedule": "^1.0.2",
-    "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/typeorm": "^8.0.2",
-    "@types/node": "^16.0.0",
+    "@nestjs/apollo": "^10.1.7",
+    "@nestjs/axios": "1.0.1",
+    "@nestjs/bull": "^0.6.2",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/graphql": "^10.1.7",
+    "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@types/node": "^18.11.18",
     "apollo-server-express": "^3.6.1",
-    "axios": "^0.24.0",
-    "bull": "^3.29.1",
-    "cache-manager": "^3.4.4",
-    "cache-manager-redis-store": "^2.0.0",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.2",
+    "axios": "^1.2.2",
+    "bull": "^4.10.2",
+    "cache-manager": "^5.1.4",
+    "cache-manager-redis-store": "^3.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.0",
     "currency.js": "^2.0.4",
+    "dotenv": "^16.0.3",
     "expose-gc": "^1.0.0",
-    "graphql": "^15.8.0",
-    "nest-winston": "^1.6.1",
-    "nestjs-console": "^7.0.1",
-    "pg": "^8.7.1",
+    "graphql": "^16.6.0",
+    "nest-winston": "^1.8.0",
+    "nestjs-console": "^8.0.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "ts-morph": "^13.0.2",
+    "rxjs": "^7.8.0",
+    "ts-morph": "^17.0.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^3.10.1",
-    "typeorm": "^0.2.41",
-    "typescript": "^4.3.5",
-    "winston": "^3.3.3",
-    "xlsx": "^0.17.2"
+    "tsconfig-paths": "^4.1.1",
+    "typeorm": "^0.3.11",
+    "typescript": "^4.9.4",
+    "winston": "^3.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.2.3",
-    "@types/cache-manager": "^3.4.2",
-    "@types/cron": "^1.7.3",
+    "@nestjs/cli": "^9.1.8",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
+    "@types/cache-manager": "^4.0.2",
+    "@types/cache-manager-redis-store": "^2.0.1",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
-    "@types/jest": "^28.1.1",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^28.1.1",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^28.0.4",
-    "ts-loader": "^9.2.3"
+    "@types/jest": "^29.2.5",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.48",
+    "@typescript-eslint/parser": "^5.48",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2"
   },
   "jest": {
     "moduleFileExtensions": [
