--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^10.2.0",
-    "@nestjs/axios": "1.0.1",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.3.12",
     "@nestjs/config": "^2.3.1",
