--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "axios": "^1.3.4",
     "bull": "^4.10.4",
     "cache-manager": "^5.2.0",
-    "cache-manager-redis-yet": "^4.1.1",
+    "cache-manager-ioredis-yet": "^1.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "currency.js": "^2.0.4",
