Adds config file for Redis to both processes. Changes CacheModule connections with Redis to use configService. Changes some BullModule connections with Redis to use configService. Changes working in smoke-test.yml. resolves #87

--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Build Containers
         run : docker compose -f docker-compose.yml -f docker-compose.ci.yml --profile migrations --profile smoke_tester build 
 
-      - name: Run compose with migrations
+      - name: Setup the database
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml --profile migrations up --exit-code-from run_migrations
 
-      - name: Run with only smoke test as an exiting container
+      - name: Run smoke test
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml --profile smoke-test up --exit-code-from smoke_tester
