Reverts Redis connections to use REDIS_URL. Adds password to Redis container and connection URL in Docker Compose.
resolves #100

--- a/common-services.yml
+++ b/common-services.yml
@@ -6,7 +6,7 @@ services:
       target: build
     environment:
       DATABASE_URL: postgres://postgres:example@postgres_db_dev:5432/postgres
-      REDIS_URL: redis://redis:6379
+      REDIS_URL: redis://:secret@redis:6379
     networks:
       - postgres_db_network
   
