--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build Containers
-        run : docker compose -f docker-compose.yml -f docker-compose.ci.yml --profile migrations --profile smoke_tester build 
+        run : docker compose -f docker-compose.ci.yml --profile migrations --profile smoke_test build 
 
-      - name: Setup the database
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml --profile migrations up --exit-code-from run_migrations
+      - name: Setup the database by running any needed migrations
+        run: docker compose -f docker-compose.ci.yml --profile migrations up --exit-code-from run_migrations
 
       - name: Run smoke test
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml --profile smoke-test up --exit-code-from smoke_tester
+        run: docker compose -f docker-compose.ci.yml --profile smoke-test up --exit-code-from test_service
