--- a/.github/workflows/run-typeorm-command.yml
+++ b/.github/workflows/run-typeorm-command.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Containers
         run : docker compose -f docker-compose.typeorm.yml build
 
-      - name: Run command
+      - name: Run command ${{ inputs.command }}
         run: |
           echo "::add-mask::DATABASE_URL"
           export DATABASE_URL=$(heroku config:get DATABASE_URL -a $HEROKU_APP_NAME)
