Fix for secrets: inherit

--- a/.github/workflows/dispatch-typeorm-command.yml
+++ b/.github/workflows/dispatch-typeorm-command.yml
@@ -27,5 +27,4 @@ jobs:
     with:
       command: ${{ inputs.command }}
       environment: ${{ inputs.environment }}
-    secrets:
-      inherit:
+    secrets: inherit
