--- a/.github/workflows/runnable-typeorm-command.yml
+++ b/.github/workflows/runnable-typeorm-command.yml
@@ -26,6 +26,6 @@ jobs:
           export DATABASE_URL=$(heroku config:get DATABASE_URL -a $APP_ID)
           docker compose -f docker-compose.typeorm.yml up --exit-code-from test_service
         env:
-          HEROKU_API_KEY: ${{ secrets.API_KEY }}
-          APP_ID: ${{ secrets.APP_NAME }}
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          APP_ID: ${{ secrets.HEROKU_APP_ID }}
           TYPEORM_COMMAND: ${{ inputs.command }}
