Makes production environment available in workflow dispatch-typeorm-command.yml

--- a/.github/workflows/dispatch-typeorm-command.yml
+++ b/.github/workflows/dispatch-typeorm-command.yml
@@ -19,7 +19,7 @@ on:
         type: choice
         options:
           - staging
-          # - production
+          - production
 
 jobs:
   dispatch-typeorm-command:
