--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -29,18 +29,17 @@ jobs:
       environment: staging
     secrets: inherit
 
-  # run-migrations-production:
-  #   needs: deploy-release-staging
+  run-migrations-production:
+    needs: deploy-release-staging
+    uses: ./.github/workflows/runnable-typeorm-command.yml
+    with:
+      command: migration:run
+      environment: production
+    secrets: inherit
 
-  #   uses: ./.github/workflows/runnable-typeorm-command.yml
-  #   with:
-  #     command: migration:run
-  #     environment: production
-  #   secrets: inherit
-
-  # deploy-release-production:
-  #   needs: run-migrations-production
-  #   uses: ./.github/workflows/deploy-heroku-runnable.yml
-  #   with:
-  #     environment: production
-  #   secrets: inherit
+  deploy-release-production:
+    needs: run-migrations-production
+    uses: ./.github/workflows/deploy-heroku-runnable.yml
+    with:
+      environment: production
+    secrets: inherit
