--- a/.github/workflows/dispatch-console-command.yml
+++ b/.github/workflows/dispatch-console-command.yml
@@ -26,7 +26,7 @@ on:
         type: choice
         options:
           - staging
-          # - production
+          - production
 
 jobs:
   dispatch-console-command:
