Changes concurrency to cancel-in-progress Removes deploy-release-production.yml Removes deploy-release-staging.yml

--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -1,6 +1,8 @@
 name: Deploy Pipeline
 
-concurrency: deployment
+concurrency: 
+  group: deployment
+  cancel-in-progress: true
 
 on:
   workflow_dispatch:
