--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
+    "@apollo/server": "^4.6.0",
     "@nestjs/apollo": "^11.0.4",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/bull": "^0.6.3",
@@ -46,7 +47,6 @@
     "@nestjs/terminus": "^9.2.2",
     "@nestjs/typeorm": "^9.0.1",
     "@types/node": "^18.15.11",
-    "apollo-server-express": "^3.12.0",
     "axios": "^1.3.4",
     "bull": "^4.10.4",
     "cache-manager": "^5.2.0",
