--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "npm run build:web && npm run build:worker",
+    "build": "npm run build:web && npm run build:worker && npm run build:updater",
     "build:web": "nest build sdvv-backend-nest",
     "build:worker": "nest build standalone-worker",
+    "build:updater": "nest build update-command",
     "db:migration:run": "npm run typeorm migration:run -- -d ./orm-data-source.ts",
     "db:initialize:data": "node -r ts-node/register apps/standalone-worker/src/console.ts initialize-data",
     "db:migration:revert": "npm run typeorm migration:revert -- -d ./orm-data-source.ts",
